--- a/public/style.css
+++ b/public/style.css
@@ -2114,7 +2114,7 @@ blockquote {
 }
 @media only screen and (max-width: 1199px) {
   .main-banner .main-banner-inner p {
-    display: none;
+    /* display: none; */
   }
 }
 .main-banner .main-banner-inner .button {
@@ -4521,14 +4521,12 @@ a.sign-button:hover {
 }
 /*------------------- 18.2 choose style --------------------*/
 .choose-us-area {
-  background: url(img/choose-bag.jpg) 0 0 no-repeat;
+  background-color: #f5f5f5;
   background-size: cover;
   margin-top: 100px;
-  color: #ffffff;
 }
 .choose-us-area .title-section h2 {
   font-size: 36px;
-  color: #ffffff;
   text-transform: capitalize;
 }
 ul.counter-list li {
