--- a/public/style.less
+++ b/public/style.less
@@ -4681,15 +4681,13 @@ a.sign-button:hover {
 /*------------------- 18.2 choose style --------------------*/
 
 .choose-us-area {
-    background: url(img/choose-bag.jpg) 0 0 no-repeat;
+    background-color: #f5f5f5;
     background-size: cover;
     margin-top: 100px;
-    color: #ffffff;
 }
 
 .choose-us-area .title-section h2 {
     font-size: 36px;
-    color: #ffffff;
     text-transform: capitalize;
 }
 
